--- a/AspNetMvcTalk.Web/Views/Shared/_Layout.cshtml
+++ b/AspNetMvcTalk.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>One Direction Fans - @ViewBag.Title</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/content/css/bootstrap.min.css" rel="stylesheet">
@@ -21,6 +21,8 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+    @Raven.Client.MvcIntegration.RavenProfiler.CurrentRequestSessions()
 </head>
 
 <body>
