--- a/AspNetMvcTalk.Web/Views/Comments/Index.cshtml
+++ b/AspNetMvcTalk.Web/Views/Comments/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "Index";
+﻿@model AspNetMvcTalk.Web.Models.Comments.IndexModel
+@{
+    ViewBag.Title = "Index";    
 }
 
 <div class="jumbotron">
@@ -22,11 +23,46 @@
     </p>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="well well-lg">
-            Currently No Comments
+@if (Model.Comments.Any())
+{
+    <div class="container">
+        <div class="page-header">
+            <h1 id="timeline">
+                <i class="glyphicon glyphicon-heart"></i>
+                Fan Timeline
+            </h1>
+        </div>
+        <ul class="timeline">
+            @for (var index = 0; index < Model.Comments.Count; index++)
+            {   
+                var comment = Model.Comments[index];
+                <li class="@Model.IsInverted(index)">
+                    <div class="timeline-badge">
+                        <img src="@Url.MemberPictureUrl(comment.Favorite)" />
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Comment from @comment.Name</h4>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> @comment.CreatedAt.DateTime.ToLongDateString() @comment.CreatedAt.DateTime.ToLongTimeString()</small></p>
+                        </div>
+                        <div class="timeline-body">
+                            <p>@comment.Text</p>
+                        </div>
+                    </div>
+                </li>
+            }
+        </ul>
+    </div>
+}
+else
+{
+    <div class="row">
+        <div class="col-md-12">
+            <div class="well well-lg">
+                Currently No Comments
+            </div>
         </div>
     </div>
-</div>
+}
+
 
